[workspace]
members = [
    "crates/bundler",
    "crates/contracts",
    "crates/grpc",
    "crates/primitives",
    "crates/rpc",
    "crates/uopool",
    "examples",
    "tests",
]

[workspace.package]
authors = ["Vid Kersic <vid.kersic@yahoo.com>"]
version = "0.2.0-alpha"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Vid201/silius"
rust-version = "1.71.1"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
ethers = "2.0.8"
expanded-pathbuf = "0.1"
parking_lot = "0.12"
serde_json = "1"
tokio = { version = "1.18", features = ["full"] }
tracing = "0.1"
revm = "3.3.0"

[profile.debug-fast]
inherits = "release"
debug = true
