[package]
name = "silius-uopool"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = """
AA (ERC-4337) bundler uopool implementation
"""

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
educe = { version = "0.4", features = ["Debug", "Default"] }
enumset = "1.1.2"
ethers = { workspace = true }
page_size = "0.5.0"
parking_lot = { workspace = true }
prost = "0.11"
serde = "1"
serde_json = { workspace = true }
silius-contracts = { path = "../contracts" }
silius-primitives = { path = "../primitives" }
tokio = { workspace = true }
tracing = { workspace = true }
reth-db = { git = "https://github.com/paradigmxyz/reth", rev="1ed5ae14bfadeee3dd542dda1bd2dfd65e6ed5ee"}
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth", rev="97913049df99ae71817f8b09c37feee98482a770"}

aes-gcm = "0.10"
[dev-dependencies]
silius-primitives = { path = "../primitives", features = ["test-utils"] }
tempdir = "0.3.7"
